fix backgroun image on mobile

--- a/assets/sass/_landingPage.scss
+++ b/assets/sass/_landingPage.scss
@@ -258,6 +258,11 @@
       div:nth-child(2) {
         flex: 50% 0 0;
       }
+      .property__select__picker,
+      .option__select__picker {
+        padding: 5px;
+        background: inherit;
+      }
       .search__field {
         flex: 65% 0 0;
         margin-top: 20px;
